<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucence"
    android:orientation="vertical"
    android:gravity="center"
    android:onClick="onContainerClicked"
    tools:context="com.xinzy.essence.kotlin.activity.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="24dp"
        android:autoLink="all"
        android:text="@string/aboutContent"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:autoLink="email"
        android:text="@string/aboutEmail"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"/>
</LinearLayout>
